# zero

./: .asm-lsp.toml  .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: rust.yml  tools.yml
boot/: Makefile
boot/src/: start.s
kernel/: Makefile  linker.ld
kernel/inc/: bios.h  mem.h  types.h  vga.h  zero.h
kernel/inc/bios/: teletype.h  vga.h
kernel/inc/mem/: far_ptr.h
kernel/inc/vga/: color.h  gm.h  pixel.h  res.h  text.h
kernel/inc/zero/: err.h  panic.h
kernel/inc/zero/sys/: err.h
kernel/inc/zero/task/: mng.h  task.h
kernel/src/: main.c
kernel/src/bios/: teletype.c  vga.c
kernel/src/kernel/: panic.c
kernel/src/mem/: far_ptr.c
kernel/src/vga/: gm.c  pixel.c  text.c
kernel/src/zero/: panic.c
kernel/src/zero/task/: mng.c
public/: README.md
rust/: Cargo.toml  README.md  rust-toolchain.toml
rust/bootloader/: Cargo.toml
rust/bootloader/src/: main.rs  panic.rs
rust/kernel/: Cargo.toml
rust/kernel/src/: main.rs  panic.rs
rust/kernel/src/core/: entry.rs  mod.rs
scripts/: cmd.lua  env.lua  log.lua
scripts/building/: x86_64.lua
scripts/zero/: cmd.lua  log.lua
shared/inc/zero/: types.h
stage0/: Makefile
stage0/src/: start.s
stage1/: Makefile
stage1/src/: a20.s  gdt.s  start.s  video.s
sys/: CMakeLists.txt
tools/: README.md
tools/zerocli/: go.mod  help.toml  main.go
tools/zerocli/internal/cmd/: config.go  root.go
tools/zerocli/internal/cmd/tools/: check.go
tools/zerocli/internal/root/: config.go
